--- a/index.html
+++ b/index.html
@@ -63,7 +63,7 @@
             </li>
           </ul>
           <span class="navbar-text">
-            <a class="button-pointer" data-toggle="modal" data-target="#loginModal">
+            <a class="button-pointer" id="loginBtn" >
               <span class="fa fa-sign-in"></span> Login
             </a>
           </span>
@@ -76,7 +76,7 @@
         <div class="modal-content">
           <div class="modal-header">
             <h4 class="modal-title">Login</h4>
-            <button type="button" class="close" data-dismiss="modal">
+            <button id="loginModalClose" type="button" class="close">
               &times;
             </button>
           </div>
@@ -135,7 +135,7 @@
         <div class="modal-content">
           <div class="modal-header">
             <h4 class="modal-title">Reserve a Table</h4>
-            <button type="button" class="close" data-dismiss="modal">
+            <button type="button" class="close" id="reserveModalClose">
               &times;
             </button>
           </div>
@@ -210,7 +210,7 @@
               </div>
             </div>
               <div class="form-row">
-                <div class="form-group col-sm-2 ">
+                <div class="form-group col-sm-2">
                   <label class="form-label">Section</label>
                 </div>
                 
@@ -260,16 +260,19 @@
                 </div>
               </div>
               <div class="form-row">
-                <button
+                <div class="offset-sm-2">
+                  <button
                   type="button"
-                  class="btn btn-secondary btn-sm mr-1"
+                  class="btn btn-secondary btn-sm"
                   data-dismiss="modal"
                 >
                   Cancel
                 </button>
-                <button type="submit" class="btn btn-primary btn-sm mr-auto">
+                <button type="submit" class="btn btn-primary btn-sm">
                   Reserve
                 </button>
+                </div>
+
               </div>
             </form>
           </div>
@@ -293,7 +296,7 @@
           </div>
 
           <div class="col-8 col-sm-3 align-self-center">
-            <a data-toggle="modal" data-target="#reserveModal" class="btn btn-warning btn-block btn-sm">
+            <a  id="reserveTableBtn" class="btn btn-warning btn-block btn-sm">
               Reserve Table
             </a>
           </div>
@@ -670,22 +673,6 @@
     <script src="node_modules/jquery/dist/jquery.slim.min.js"></script>
     <script src="node_modules/popper.js/dist/umd/popper.min.js"></script>
     <script src="node_modules/bootstrap/dist/js/bootstrap.min.js"></script>
-    <script>
-      $(document).ready(function() {
-        $("#mycarousel").carousel({ interval: 2000 });
-        $("#carouselButton").click(function(){
-                if ($("#carouselButton").children("span").hasClass('fa-pause')) {
-                    $("#mycarousel").carousel('pause');
-                    $("#carouselButton").children("span").removeClass('fa-pause');
-                    $("#carouselButton").children("span").addClass('fa-play');
-                }
-                else if ($("#carouselButton").children("span").hasClass('fa-play')){
-                    $("#mycarousel").carousel('cycle');
-                    $("#carouselButton").children("span").removeClass('fa-play');
-                    $("#carouselButton").children("span").addClass('fa-pause');                    
-                }
-            });
-      });
-    </script>
+    <script src="js/scripts.js" ></script>
   </body>
 </html>
