--- a/aboutus.html
+++ b/aboutus.html
@@ -2,6 +2,7 @@
 <html lang="en">
   <head>
     <!-- Bootstrap CSS -->
+    <!--build:css css/main.css-->
     <link
       rel="stylesheet"
       href="node_modules/bootstrap/dist/css/bootstrap.min.css"
@@ -15,6 +16,8 @@
       rel="stylesheet"
       href="node_modules/bootstrap-social/bootstrap-social.css"
     />
+    <link href="css/styles.css" rel="stylesheet" />
+    <!-- endbuild -->
 
     <title>Ristorante Con Fusion: About Us</title>
   </head>
@@ -51,7 +54,7 @@
               >
             </li>
             <li class="nav-item ">
-              <a class="nav-link" href="#"
+              <a class="nav-link" href="./contactus.html"
                 ><span class="fa fa-address-card fa-lg"></span> Contact</a
               >
             </li>
@@ -379,9 +382,11 @@
       </div>
     </footer>
     <!-- jQuery first, then Popper.js, then Bootstrap JS. -->
+    <!-- build:js js/main.js -->
     <script src="node_modules/jquery/dist/jquery.slim.min.js"></script>
     <script src="node_modules/popper.js/dist/umd/popper.min.js"></script>
     <script src="node_modules/bootstrap/dist/js/bootstrap.min.js"></script>
     <script src="js/scripts.js"></script>
+    <!-- endbuild -->
   </body>
 </html>
